--- a/auth/google-credentials.html
+++ b/auth/google-credentials.html
@@ -1,213 +1,197 @@
 <!DOCTYPE html>
-<!--
-Copyright (c) 2016 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
 <html>
 <head>
-  <meta charset=utf-8 />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--
-    Note that Google Sign In does not work from a file URL. You will need to make
-    this page available from a web server, either from localhost or using Firebase
-    Hosting.
+    <meta charset=utf-8/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--1) Google Sign In не будет работать, если вы просто откроете настоящий файл в браузере,
+    Вам необходимо запустить сервер локально (localhost), или через Firebase Hosting -> туториал на эту тему-->
 
-    Whichever domain it is running on, you'll have to add the origin for that domain
-    in the Google Developer Console: https://console.developers.google.com, search
-    for Credentials and create a new credential > OAuth client ID > web application,
-    and set the domain as an authorised origin (e.g. http://localhost:8000 or https://foo.bar).
-    -->
-  <!-- [START google_config] -->
-  <!-- **********************************************
-       * TODO(DEVELOPER): Use your Client ID below. *
-       ********************************************** -->
-  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID">
-  <meta name="google-signin-cookiepolicy" content="single_host_origin">
-  <meta name="google-signin-scope" content="profile email">
-  <!-- [END google_config] -->
-  <title>Google Sign In Example</title>
+    <!--2) Какой бы вы домен не использовали, для использования данной веб страницы вы должны сделать следующее
+    Пройдите в консоль разработчиков Гугл https://console.developers.google.com, нажмите на Учетные данные (Credentials)
+    и создайте новый OAuth client ID а также подтвердите права на домен (нажмите на соответствующую вкладку в консоли)
+    и далее вставьте OAuth client ID ниже в коде-->
+    <!-- [Конфигурация Гугл настроек] -->
+    <!-- **********************************************
+         * TODO(Разработчику): Вставьте OAuth client ID ниже. *
+         ********************************************** -->
+    <meta name="google-signin-client_id" content="ВСТАВЬТЕ_СЮДА_AUTH_CLIENT_ID">
+    <meta name="google-signin-cookiepolicy" content="single_host_origin">
+    <meta name="google-signin-scope" content="profile email">
 
-  <!-- Material Design Theming -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <title>Логин Гугл</title>
 
-  <link rel="stylesheet" href="main.css">
+    <!-- CSS файлы для дизайна веб-страницы-->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <link rel="stylesheet" href="main.css">
 
-  <!-- Google Sign In -->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- Google Логин API -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-  <!-- Import and configure the Firebase SDK -->
-  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
-  <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
-  <script src="/__/firebase/4.0.0/firebase-app.js"></script>
-  <script src="/__/firebase/4.0.0/firebase-auth.js"></script>
-  <script src="/__/firebase/init.js"></script>
+    <!--Инициализация Firebase SDK-->
+    <!--1) Ниже указанные скрипты доступны если вы используете приложение совместно с Firebase Hosting-->
+    <script src="/__/firebase/4.0.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.0.0/firebase-auth.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <!--2) Второй способ инициализации Firebase SDK-->
+    <!--Пройдите в консоль Firebase и на обзорной странице при добавлении  веб приложения скопируйте
+  предложенный кусок кода и вставьте его вместо данных скриптов. Образец кода ниже-->
+    <!--Данный способ также рассматривался в соответствующих туториалах https://goo.gl/hokNzj-->
+    <!--<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>-->
+    <!--<script>-->
+    <!--// Initialize Firebase-->
+    <!--var config = {-->
+    <!--apiKey: "...",-->
+    <!--authDomain: "...",-->
+    <!--databaseURL: "https://...",-->
+    <!--projectId: "...",-->
+    <!--storageBucket: "...",-->
+    <!--messagingSenderId: "..."-->
+    <!--};-->
+    <!--firebase.initializeApp(config);-->
+    <!--</script>-->
+    <script type="text/javascript">
 
-  <script type="text/javascript">
+        // [Начало]
+        function onSignIn(googleUser) {
+            console.log('Ответ от Google Auth', googleUser);
+            // Нам необходимо установить обозреватель (слушатель) на Firebase Auth дабы убедиться чтобы атунтификация инициализирована
+            var unsubscribe = firebase.auth().onAuthStateChanged(function (firebaseUser) {
+                unsubscribe();
+                // Проверяем залогинены ли мы уже с данным Гугл аккаунтом
+                if (!isUserEqual(googleUser, firebaseUser)) {
+                    // Создаем учетные данные Firebase из полученных данных Гугл аккаунта
+                    // Получаем данные
+                    var credential = firebase.auth.GoogleAuthProvider.credential(
+                        googleUser.getAuthResponse().id_token);
+                    // Логинимся
+                    firebase.auth().signInWithCredential(credential).catch(function (error) {
+                        // На случай ошибок.
+                        var errorCode = error.code;
+                        var errorMessage = error.message;
+                        var email = error.email;
+                        var credential = error.credential;
+                        if (errorCode === 'auth/account-exists-with-different-credential') {
+                            alert('Вы уже зарегистрировались за другим провайдером за этим email');
+                            // Здесь можно вставить код для соединения всех провайдером под одни email
+                        } else {
+                            console.error(error);
+                        }
+                    });
+                } else {
+                    console.log('Пользователь уже залогинен');
+                }
+            });
+        }
 
-    // [START googlecallback]
-    function onSignIn(googleUser) {
-      console.log('Google Auth Response', googleUser);
-      // We need to register an Observer on Firebase Auth to make sure auth is initialized.
-      var unsubscribe = firebase.auth().onAuthStateChanged(function(firebaseUser) {
-        unsubscribe();
-        // Check if we are already signed-in Firebase with the correct user.
-        if (!isUserEqual(googleUser, firebaseUser)) {
-          // Build Firebase credential with the Google ID token.
-          // [START googlecredential]
-          var credential = firebase.auth.GoogleAuthProvider.credential(
-              googleUser.getAuthResponse().id_token);
-          // [END googlecredential]
-          // Sign in with credential from the Google user.
-          // [START authwithcred]
-          firebase.auth().signInWithCredential(credential).catch(function(error) {
-            // Handle Errors here.
-            var errorCode = error.code;
-            var errorMessage = error.message;
-            // The email of the user's account used.
-            var email = error.email;
-            // The firebase.auth.AuthCredential type that was used.
-            var credential = error.credential;
-            // [START_EXCLUDE]
-            if (errorCode === 'auth/account-exists-with-different-credential') {
-              alert('You have already signed up with a different auth provider for that email.');
-              // If you are using multiple auth providers on your app you should handle linking
-              // the user's accounts here.
-            } else {
-              console.error(error);
+
+        /**
+         * Проверяем что пользователь Гугл аккаунта сходится с пользователем Firebase приложения
+         */
+        function isUserEqual(googleUser, firebaseUser) {
+            if (firebaseUser) {
+                var providerData = firebaseUser.providerData;
+                for (var i = 0; i < providerData.length; i++) {
+                    if (providerData[i].providerId === firebase.auth.GoogleAuthProvider.PROVIDER_ID &&
+                        providerData[i].uid === googleUser.getBasicProfile().getId()) {
+                        return true;
+                    }
+                }
             }
-            // [END_EXCLUDE]
-          });
-          // [END authwithcred]
-        } else {
-          console.log('User already signed-in Firebase.');
+            return false;
         }
-      });
-    }
-    // [END googlecallback]
 
-    /**
-     * Check that the given Google user is equals to the given Firebase user.
-     */
-    // [START checksameuser]
-    function isUserEqual(googleUser, firebaseUser) {
-      if (firebaseUser) {
-        var providerData = firebaseUser.providerData;
-        for (var i = 0; i < providerData.length; i++) {
-          if (providerData[i].providerId === firebase.auth.GoogleAuthProvider.PROVIDER_ID &&
-              providerData[i].uid === googleUser.getBasicProfile().getId()) {
-            // We don't need to reauth the Firebase connection.
-            return true;
-          }
+
+        /**
+         * Функционал когда нажимается кнопка sign out
+         */
+        function handleSignOut() {
+            var googleAuth = gapi.auth2.getAuthInstance();
+            googleAuth.signOut().then(function () {
+                firebase.auth().signOut();
+            });
         }
-      }
-      return false;
-    }
-    // [END checksameuser]
-
-    /**
-     * Handle the sign out button press.
-     */
-    function handleSignOut() {
-      var googleAuth = gapi.auth2.getAuthInstance();
-      googleAuth.signOut().then(function() {
-        firebase.auth().signOut();
-      });
-    }
 
 
-    /**
-     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
-     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
-     *    out, and that is where we update the UI.
-     */
-    function initApp() {
-      // Auth state changes.
-      // [START authstatelistener]
-      firebase.auth().onAuthStateChanged(function(user){
-        if (user) {
-          // User is signed in.
-          var displayName = user.displayName;
-          var email = user.email;
-          var emailVerified = user.emailVerified;
-          var photoURL = user.photoURL;
-          var isAnonymous = user.isAnonymous;
-          var uid = user.uid;
-          var providerData = user.providerData;
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
-          document.getElementById('signout').disabled = false;
-          document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
-          // [END_EXCLUDE]
-        } else {
-          // User is signed out.
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
-          document.getElementById('signout').disabled = true;
-          document.getElementById('quickstart-account-details').textContent = 'null';
-            // [END_EXCLUDE]
+        /**
+         *  initApp() обеспечивает настройку пользовательского интерфейся и регистрацию слушателей Firebase Аутентификации
+         *  - firebase.auth().onAuthStateChanged: это слушатель срабатывает когда пользователь залогинен или разлогинен
+         *  и тогда мы обновляем пользовательский интерфейс
+         */
+        function initApp() {
+            // Слушаем изменения статус аутентификации
+            firebase.auth().onAuthStateChanged(function (user) {
+                if (user) {
+                    // Если пользователь залогинен
+                    var displayName = user.displayName;
+                    var email = user.email;
+                    var emailVerified = user.emailVerified;
+                    var photoURL = user.photoURL;
+                    var isAnonymous = user.isAnonymous;
+                    var uid = user.uid;
+                    var providerData = user.providerData;
+                    // [Устанавливаем текст на кнопках]
+                    document.getElementById('quickstart-sign-in-status').textContent = 'Залогинен';
+                    document.getElementById('signout').disabled = false;
+                    document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
+                } else {
+                    // Если пользователь разлогинен
+                    // [Устанавливаем текст на кнопках]
+                    document.getElementById('quickstart-sign-in-status').textContent = 'Разлогинен';
+                    document.getElementById('signout').disabled = true;
+                    document.getElementById('quickstart-account-details').textContent = 'null';
+                }
+            });
+            // устаналиваем слушатель на кнопку на разлогин
+            document.getElementById('signout').addEventListener('click', handleSignOut, false);
         }
-      });
-      // [END authstatelistener]
-
-      document.getElementById('signout').addEventListener('click', handleSignOut, false);
-    }
-
-    window.onload = function() {
-      initApp();
-    };
-  </script>
+        // запускаем функцию initApp()
+        window.onload = function () {
+            initApp();
+        };
+    </script>
 </head>
 <body>
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-  <!-- Header section containing title -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <a href="/"><h3>Firebase Authentication</h3></a>
-      </div>
-    </div>
-  </header>
-
-  <main class="mdl-layout__content mdl-color--grey-100">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-
-      <!-- Container for the demo -->
-      <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Google Authentication with OAuth Credentials</h2>
+    <!-- Залоговок страницы -->
+    <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+        <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+            <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+                <a href="/"><h4 style="color:white;">Firebase Аутентификация</h4></a>
+            </div>
         </div>
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <p>Sign in with your Google account below.</p>
-          <!-- [START google_button] -->
-          <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-          <!-- [END google_button] -->
-          <br>
-          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">Sign Out</button>
+    </header>
 
-          <div class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
-            <pre><code id="quickstart-account-details">null</code></pre>
-          </div>
+    <main class="mdl-layout__content mdl-color--grey-100">
+        <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+
+            <!-- Контейнер-->
+            <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+                <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
+                    <h2 class="mdl-card__title-text">Гугл Аутентификация с учетными данными</h2>
+                </div>
+                <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+                    <p>Аутентифицируйтесь с аккаунтом Гугл</p>
+                    <!-- [Кнопка гугл] -->
+                    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+
+                    <br>
+                    <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">
+                        Разлогин
+                    </button>
+                    <!--Контейнер для отображения данных пользователя самому пользователю-->
+                    <div class="quickstart-user-details-container">
+                        Статус: <span id="quickstart-sign-in-status">Неизвестно </span>
+                        <div>Firebase Аутентификация <code>Текущий пользователь </code> содержимое объекта: </div>
+                        <pre><code id="quickstart-account-details">null</code></pre>
+                    </div>
+                </div>
+            </div>
+
         </div>
-      </div>
-
-    </div>
-  </main>
+    </main>
 </div>
 </body>
 </html>
