--- a/auth/google-redirect.html
+++ b/auth/google-redirect.html
@@ -1,115 +1,99 @@
 <!DOCTYPE html>
-<!--
-Copyright (c) 2016 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
 <html>
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google Sign In Example</title>
 
-  <!-- Material Design Theming -->
+  <!-- CSS файлы для дизайна веб-страницы-->
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
   <link rel="stylesheet" href="main.css">
 
-  <!-- Import and configure the Firebase SDK -->
-  <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
-  <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+  <!--Инициализация Firebase SDK-->
+  <!--1) Ниже указанные скрипты доступны если вы используете приложение совместно с Firebase Hosting-->
   <script src="/__/firebase/4.0.0/firebase-app.js"></script>
   <script src="/__/firebase/4.0.0/firebase-auth.js"></script>
   <script src="/__/firebase/init.js"></script>
-
+  <!--2) Второй способ инициализации Firebase SDK-->
+  <!--Пройдите в консоль Firebase и на обзорной странице при добавлении  веб приложения скопируйте
+предложенный кусок кода и вставьте его вместо данных скриптов. Образец кода ниже-->
+  <!--Данный способ также рассматривался в соответствующих туториалах https://goo.gl/hokNzj-->
+  <!--<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>-->
+  <!--<script>-->
+  <!--// Initialize Firebase-->
+  <!--var config = {-->
+  <!--apiKey: "...",-->
+  <!--authDomain: "...",-->
+  <!--databaseURL: "https://...",-->
+  <!--projectId: "...",-->
+  <!--storageBucket: "...",-->
+  <!--messagingSenderId: "..."-->
+  <!--};-->
+  <!--firebase.initializeApp(config);-->
+  <!--</script>-->
   <script type="text/javascript">
 
     /**
-     * Function called when clicking the Login/Logout button.
+     * Функционал кнопки Логин/Разлогин
      */
-    // [START buttoncallback]
     function toggleSignIn() {
       if (!firebase.auth().currentUser) {
-        // [START createprovider]
+          // [создаем провайдера]
         var provider = new firebase.auth.GoogleAuthProvider();
-        // [END createprovider]
-        // [START addscopes]
+          // [Опционально: вы можете запросить данные от провайдера (в данном случае делаем только контакты)]
         provider.addScope('https://www.googleapis.com/auth/plus.login');
-        // [END addscopes]
-        // [START signin]
+          // [Логин]
         firebase.auth().signInWithRedirect(provider);
-        // [END signin]
       } else {
-        // [START signout]
+          // [Разлогин]
         firebase.auth().signOut();
-        // [END signout]
       }
-      // [START_EXCLUDE]
+      // [Выключаем кнопку]
       document.getElementById('quickstart-sign-in').disabled = true;
-      // [END_EXCLUDE]
     }
-    // [END buttoncallback]
 
 
     /**
-     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
-     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
-     *    out, and that is where we update the UI.
-     *  - firebase.auth().getRedirectResult(): This promise completes when the user gets back from
-     *    the auth redirect flow. It is where you can get the OAuth access token from the IDP.
+     *  initApp() обеспечивает настройку пользовательского интерфейся и регистрацию слушателей Firebase Аутентификации
+     *  - firebase.auth().onAuthStateChanged: это слушатель срабатывает когда пользователь залогинен или разлогинен
+     *  и тогда мы обновляем пользовательский интерфейс.
+     *  - firebase.auth().getRedirectResult(): данный promise заканчивается когда пользователь возвращается из
+     *  редиректа. Здесь вы можете получить OAuth токен доаступа из IDP
      */
     function initApp() {
-      // Result from Redirect auth flow.
-      // [START getidptoken]
+      // Результат из редиректа
       firebase.auth().getRedirectResult().then(function(result) {
         if (result.credential) {
-          // This gives you a Google Access Token. You can use it to access the Google API.
+            // Это дает нам токен доступа Гугл. Его можно использовать для доступа к Гугл API
           var token = result.credential.accessToken;
-          // [START_EXCLUDE]
+            // [Отображаем токен на странице]
           document.getElementById('quickstart-oauthtoken').textContent = token;
         } else {
           document.getElementById('quickstart-oauthtoken').textContent = 'null';
-          // [END_EXCLUDE]
         }
-        // The signed-in user info.
+          // Данные залогиненного пользователя
         var user = result.user;
       }).catch(function(error) {
-        // Handle Errors here.
+          // В случае ошибок
         var errorCode = error.code;
         var errorMessage = error.message;
-        // The email of the user's account used.
         var email = error.email;
-        // The firebase.auth.AuthCredential type that was used.
         var credential = error.credential;
-        // [START_EXCLUDE]
         if (errorCode === 'auth/account-exists-with-different-credential') {
-          alert('You have already signed up with a different auth provider for that email.');
-          // If you are using multiple auth providers on your app you should handle linking
-          // the user's accounts here.
+            alert('Вы уже зарегистрировались за другим провайдером за этим email');
+            // Здесь можно вставить код для соединения всех провайдером под одни email
         } else {
           console.error(error);
         }
-        // [END_EXCLUDE]
       });
-      // [END getidptoken]
 
-      // Listening for auth state changes.
-      // [START authstatelistener]
+        // Слушаем изменения статус аутентификации
       firebase.auth().onAuthStateChanged(function(user) {
         if (user) {
-          // User is signed in.
+            // Если пользователь залогинен
           var displayName = user.displayName;
           var email = user.email;
           var emailVerified = user.emailVerified;
@@ -117,26 +101,20 @@ limitations under the License.
           var isAnonymous = user.isAnonymous;
           var uid = user.uid;
           var providerData = user.providerData;
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
-          document.getElementById('quickstart-sign-in').textContent = 'Sign out';
+          document.getElementById('quickstart-sign-in-status').textContent = 'Залогинен';
+          document.getElementById('quickstart-sign-in').textContent = 'Разлогин';
           document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
-          // [END_EXCLUDE]
         } else {
-          // User is signed out.
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
-          document.getElementById('quickstart-sign-in').textContent = 'Sign in with Google';
+            // Если пользователь разлогинен
+          document.getElementById('quickstart-sign-in-status').textContent = 'Разлогинен';
+          document.getElementById('quickstart-sign-in').textContent = 'Логин с Гугл';
           document.getElementById('quickstart-account-details').textContent = 'null';
           document.getElementById('quickstart-oauthtoken').textContent = 'null';
-          // [END_EXCLUDE]
         }
-        // [START_EXCLUDE]
-        document.getElementById('quickstart-sign-in').disabled = false;
-        // [END_EXCLUDE]
+          // [Выключаем кнопку]
+          document.getElementById('quickstart-sign-in').disabled = false;
       });
-      // [END authstatelistener]
-
+        // устаналиваем слушатель на кнопку на логин/разлогин
       document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
     }
 
@@ -148,11 +126,11 @@ limitations under the License.
 <body>
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-  <!-- Header section containing title -->
+  <!-- Залоговок страницы -->
   <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
       <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <a href="/"><h3>Firebase Authentication</h3></a>
+        <a href="/"><h4 style="color:white;">Firebase Аутентификация</h4></a>
       </div>
     </div>
   </header>
@@ -160,23 +138,24 @@ limitations under the License.
   <main class="mdl-layout__content mdl-color--grey-100">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
 
-      <!-- Container for the demo -->
+      <!-- Контейнер-->
       <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
         <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Google Authentication with Redirect</h2>
+          <h2 class="mdl-card__title-text">Гугл Аутентификация через перенаправление на страницу</h2>
         </div>
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <p>Sign in with your Google account below.</p>
+          <p>Аутентифицируйтесь с аккаунтом Гугл</p>
 
-          <!-- Button that handles sign-in/sign-out -->
-          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with Google</button>
+          <!-- [Кнопка логин/разлогин] -->
+          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Логин с
+            Гугл</button>
 
-          <!-- Container where we'll display the user details -->
+          <!--Контейнер для отображения данных пользователя самому пользователю-->
           <div class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
+            Статус: <span id="quickstart-sign-in-status">Неизвестно</span>
+            <div>Firebase Аутентификация <code>Текущий пользователь </code> содержимое объекта: </div>
             <pre><code id="quickstart-account-details">null</code></pre>
-            <div>Google OAuth Access Token:</div>
+            <div>Токен доступа Гугл </div>
             <pre><code id="quickstart-oauthtoken">null</code></pre>
           </div>
         </div>
