--- a/auth/index.html
+++ b/auth/index.html
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
             </div>
-            <p><a href="https://github.com/KonstantinKochetov/FirebaseAuth_Web_public">Код с комментариями</a></p>
+            <p><a href="https://github.com/KonstantinKochetov/FirebaseAuth_Web_public">Код с комментариями доступен здесь</a></p>
 
         </div>
     </main>
