--- a/auth/google-credentials.html
+++ b/auth/google-credentials.html
@@ -6,15 +6,15 @@
     <!--1) Google Sign In не будет работать, если вы просто откроете настоящий файл в браузере,
     Вам необходимо запустить сервер локально (localhost), или через Firebase Hosting -> туториал на эту тему-->
 
-    <!--2) Какой бы вы домен не использовали, для использования данной веб страницы вы должны сделать следующее
-    Пройдите в консоль разработчиков Гугл https://console.developers.google.com, нажмите на Учетные данные (Credentials)
-    и создайте новый OAuth client ID а также подтвердите права на домен (нажмите на соответствующую вкладку в консоли)
-    и далее вставьте OAuth client ID ниже в коде-->
+    <!--  2) Какой бы вы домен не использовали, для использования данной веб страницы вы должны сделать следующее
+      Пройдите в консоль разработчиков Гугл https://console.developers.google.com, нажмите на Учетные данные (Credentials)
+      и создайте новый OAuth client ID а также подтвердите права на домен (нажмите на соответствующую вкладку в консоли)
+      и далее вставьте OAuth client ID ниже в коде-->
     <!-- [Конфигурация Гугл настроек] -->
     <!-- **********************************************
          * TODO(Разработчику): Вставьте OAuth client ID ниже. *
          ********************************************** -->
-    <meta name="google-signin-client_id" content="ВСТАВЬТЕ_СЮДА_AUTH_CLIENT_ID">
+    <meta name="google-signin-client_id" content="464104571675-ga4vgkbcmpdn6eueh1qfse79nceghefn.apps.googleusercontent.com">
     <meta name="google-signin-cookiepolicy" content="single_host_origin">
     <meta name="google-signin-scope" content="profile email">
 
@@ -132,14 +132,10 @@
                     var uid = user.uid;
                     var providerData = user.providerData;
                     // [Устанавливаем текст на кнопках]
-                    document.getElementById('quickstart-sign-in-status').textContent = 'Залогинен';
-                    document.getElementById('signout').disabled = false;
                     document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
                 } else {
                     // Если пользователь разлогинен
                     // [Устанавливаем текст на кнопках]
-                    document.getElementById('quickstart-sign-in-status').textContent = 'Разлогинен';
-                    document.getElementById('signout').disabled = true;
                     document.getElementById('quickstart-account-details').textContent = 'null';
                 }
             });
@@ -159,7 +155,7 @@
     <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
         <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
             <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-                <a href="/"><h4 style="color:white;">Firebase Аутентификация</h4></a>
+                <a href="/"><h4 style="color:white;">Firebase Аутентификация (firebase-info.com)</h4></a>
             </div>
         </div>
     </header>
@@ -178,12 +174,8 @@
                     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
 
                     <br>
-                    <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="signout" name="signout">
-                        Разлогин
-                    </button>
                     <!--Контейнер для отображения данных пользователя самому пользователю-->
                     <div class="quickstart-user-details-container">
-                        Статус: <span id="quickstart-sign-in-status">Неизвестно </span>
                         <div>Firebase Аутентификация <code>Текущий пользователь </code> содержимое объекта: </div>
                         <pre><code id="quickstart-account-details">null</code></pre>
                     </div>
