--- a/auth/google-popup.html
+++ b/auth/google-popup.html
@@ -62,7 +62,7 @@
                     var credential = error.credential;
                     if (errorCode === 'auth/account-exists-with-different-credential') {
                         alert('Вы уже зарегистрировались за другим провайдером за этим email');
-                        // Здесь можно вставить код для соединения всех провайдером под одни email
+                        // Здесь можно вставить код для соединения всех провайдером под одним email
                     } else {
                         console.error(error);
                     }
@@ -125,7 +125,7 @@
     <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
         <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
             <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-                <a href="/"><h4 style="color:white;">Firebase Аутентификация</h4></a>
+                <a href="/"><h4 style="color:white;">Firebase Аутентификация (firebase-info.com)</h4></a>
             </div>
         </div>
     </header>
