--- a/auth/email.html
+++ b/auth/email.html
@@ -190,7 +190,7 @@
     <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
         <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
             <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-                <a href="/"><h4 style="color:white;">Firebase Аутентификация</h4></a>
+                <a href="/"><h4 style="color:white;">Firebase Аутентификация (firebase-info.com)</h4></a>
             </div>
         </div>
     </header>
